--- a/classes/Polygon/package.json
+++ b/classes/Polygon/package.json
@@ -2,7 +2,6 @@
   "name": "simple",
   "version": "1.0.0",
   "dependencies": {
-    "@retter/rdk": "1.1.15",
-    "tesseract.js": "2.1.5"
+    "@retter/rdk": "1.1.15"
   }
 }
