--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b .",
-    "deploy": "export RIO_CLI_URL=api.a101prod.retter.io && rio d --project-id YOUR_PROJECT_ID --profile YOUR_PROFILE"
+    "deploy": "export RIO_CLI_URL=api.a101prod.retter.io && rio d --project-id 132c0ntts --profile goodman"
   },
   "keywords": [],
   "author": "",
