--- a/classes/Polygon/package.json
+++ b/classes/Polygon/package.json
@@ -2,6 +2,7 @@
   "name": "simple",
   "version": "1.0.0",
   "dependencies": {
-    "@retter/rdk": "1.1.15"
+    "@retter/rdk": "1.1.15",
+    "zod": "^3.19.1"
   }
 }
