--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b .",
+    "test": "ava",
     "deploy": "export RIO_CLI_URL=api.a101prod.retter.io && rio d --project-id 1c25k5o9a"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "14.17.2"
+    "@types/node": "17.0.9",
+    "ava": "4.0.1",
+    "tsconfig-paths": "^3.13.0",
+    "ts-node": "10.4.0",
+    "typescript": "4.5.4"
   },
   "dependencies": {
     "@retter/rio-cli": "^1.10.0",
     "@retter/sdk": "^0.4.0",
-    "rio": "^2.4.1",
-    "tesseract.js": "^2.1.5",
-    "textract": "^2.5.0"
+    "dotenv": "16.0.0",
+    "lodash": "^4.17.21",
+    "rio": "^2.4.1"
   }
 }
