--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "build": "tsc -b .",
     "test": "ava",
+    "export-models": "turbo run export-models",
     "deploy": "export RIO_CLI_URL=api.a101prod.retter.io && rio d --project-id 1c25k5o9a"
   },
+  "workspaces": [
+    "classes/*"
+  ],
   "type": "module",
   "keywords": [],
   "author": "",
@@ -17,7 +21,10 @@
     "ava": "4.0.1",
     "tsconfig-paths": "^3.13.0",
     "ts-node": "10.4.0",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "turbo": "1.5.5",
+    "zod-to-json-schema": "3.17.0",
+    "zod": "3.17.2"
   },
   "dependencies": {
     "@retter/rio-cli": "^1.10.0",
